--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 							<div class="col-md-4">
 								<div class="creative-member">
 									<div class="creative-member-img">
-										<a href="#" title=""><img src="http://placehold.it/370x346" alt="" /></a>
+										<a href="#" title=""><img src="images/resource/member-img.png" alt="" /></a>
 										<div class="creative-bar">
 											<span>David Kim</span>
 											<a href="#" title=""><i class="fa fa-facebook"></i></a>
@@ -533,7 +533,7 @@
 							<div class="col-md-4">
 								<div class="creative-member">
 									<div class="creative-member-img">
-										<a href="#" title=""><img src="http://placehold.it/370x346" alt="" /></a>
+										<a href="#" title=""><img src="images/resource/member-img.png" alt="" /></a>
 										<div class="creative-bar">
 											<span>Jenny Lee</span>
 											<a href="#" title=""><i class="fa fa-facebook"></i></a>
@@ -549,7 +549,7 @@
 							<div class="col-md-4">
 								<div class="creative-member">
 									<div class="creative-member-img">
-										<a href="#" title=""><img src="http://placehold.it/370x346" alt="" /></a>
+										<a href="#" title=""><img src="images/resource/member-img.png" alt="" /></a>
 										<div class="creative-bar">
 											<span>Michael Park</span>
 											<a href="#" title=""><i class="fa fa-facebook"></i></a>
@@ -565,7 +565,7 @@
 							<div class="col-md-4">
 								<div class="creative-member">
 									<div class="creative-member-img">
-										<a href="#" title=""><img src="http://placehold.it/370x346" alt="" /></a>
+										<a href="#" title=""><img src="images/resource/member-img.png" alt="" /></a>
 										<div class="creative-bar">
 											<span>Rachel Lim</span>
 											<a href="#" title=""><i class="fa fa-facebook"></i></a>
@@ -581,7 +581,7 @@
 							<div class="col-md-4">
 								<div class="creative-member">
 									<div class="creative-member-img">
-										<a href="#" title=""><img src="http://placehold.it/370x346" alt="" /></a>
+										<a href="#" title=""><img src="images/resource/member-img.png" alt="" /></a>
 										<div class="creative-bar">
 											<span>Emily Choi</span>
 											<a href="#" title=""><i class="fa fa-facebook"></i></a>
@@ -597,7 +597,7 @@
 							<div class="col-md-4">
 								<div class="creative-member">
 									<div class="creative-member-img">
-										<a href="#" title=""><img src="http://placehold.it/370x346" alt="" /></a>
+										<a href="#" title=""><img src="images/resource/member-img.png" alt="" /></a>
 										<div class="creative-bar">
 											<span>Chris Yang</span>
 											<a href="#" title=""><i class="fa fa-facebook"></i></a>
