--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 									<img src="images/aIRian2.png">
 									</div><!-- Creative Member Image -->
 										
-									<h4><a href="https://www.coingecko.com/en/coins/meowcat-2" title="" target="_blank">MEOWCAT (MEOWCAT)</a></h4>
+									<h4><a href="https://www.coingecko.com/en/coins/meowcat-2" title="" target="_blank">Greenchie (GNC)</a></h4>
 									
 								</div><!-- Creative Member -->
 							</div>
